--- a/styles/architects.css
+++ b/styles/architects.css
@@ -9,6 +9,10 @@
 
 
 /* Shared styles */
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
 .display-flex{
     display: flex;
 }
@@ -22,6 +26,14 @@
     border: 0;
 }
 
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main > section{
+    margin-top: 130px;
+}
 /* Dark 2 */
 .text-gray{
     color: #424242;
@@ -31,6 +43,9 @@
     color: #727272;
 }
 
+.text-primary{
+    color: #FF900E;
+}
 .bg-light{
     background-color: rgba(255, 144, 14, 0.1);
 }
@@ -75,9 +90,43 @@
     width: 100%;
 }
 
+/* team and feature related styles */
+.teams{
+    align-items: center;
+}
+
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+#quick-list{
+    font-weight: 500;
+}
 /* Responsive media query */
 @media screen and (max-width: 576px) {
- .navbar, .nav-link{
+ .navbar, .nav-link, .teams{
     flex-direction: column;
  }   
+ .team-img-container{
+    grid-template-columns: repeat(1, 1fr);
+ }
+ .our-features{
+    margin-left: 20px;
+ }
+}
+
+/* medium size device */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin: 50px auto;
+    }
 }
