--- a/styles/architects.css
+++ b/styles/architects.css
@@ -108,6 +108,22 @@ main > section{
 #quick-list{
     font-weight: 500;
 }
+
+/* Some facts related styles */
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+.fact-card{
+    border: 1px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
 /* Responsive media query */
 @media screen and (max-width: 576px) {
  .navbar, .nav-link, .teams{
@@ -119,6 +135,21 @@ main > section{
  .our-features{
     margin-left: 20px;
  }
+}
+
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+.fact-description{
+    max-width: 540px;
 }
 
 /* medium size device */
