--- a/styles/architects.css
+++ b/styles/architects.css
@@ -123,20 +123,6 @@ main > section{
     justify-content: center;
     text-align: center;
 }
-
-/* Responsive media query */
-@media screen and (max-width: 576px) {
- .navbar, .nav-link, .teams{
-    flex-direction: column;
- }   
- .team-img-container{
-    grid-template-columns: repeat(1, 1fr);
- }
- .our-features{
-    margin-left: 20px;
- }
-}
-
 .fact-number{
     font-size: 2.8rem;
     font-weight: 600;
@@ -152,6 +138,40 @@ main > section{
     max-width: 540px;
 }
 
+/* sponsor related styles */
+.sponsors-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
+
+/* Responsive media query */
+@media screen and (max-width: 576px) {
+ .navbar, .nav-link, .teams{
+    flex-direction: column;
+ }   
+ .team-img-container, .facts-container, .sponsor-companies{
+    grid-template-columns: repeat(1, 1fr);
+ }
+ .facts-container{
+    justify-items: center;
+    gap: 24px;
+ }
+ .our-features{
+    margin-left: 20px;
+ }
+ .sponsor-companies{
+    justify-items: center;
+    gap: 50px;
+ }
+}
 /* medium size device */
 @media screen and (min-width: 576px) and (max-width: 992px) {
     .teams{
@@ -159,5 +179,10 @@ main > section{
     }
     .our-features{
         margin: 50px auto;
+    }
+    .sponsor-companies, .facts-container{
+        grid-template-columns: repeat(3,1fr);
+        gap: 50px;
+        justify-items: center;
     }
 }
