added experience badges and made feature section responsive

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -108,6 +108,40 @@ main > section{
 #quick-list{
     font-weight: 500;
 }
+/* Features section related styles */
+.features{
+    gap: 146px;
+}
+#feature-section-title{
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+.feature-card .feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+.feature-card{
+    padding: 30px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+.featured-architect{
+    width: 100%;
+}
 
 /* Some facts related styles */
 .facts-container{
@@ -154,10 +188,10 @@ main > section{
 
 /* Responsive media query */
 @media screen and (max-width: 576px) {
- .navbar, .nav-link, .teams{
+ .navbar, .nav-link, .teams, .features{
     flex-direction: column;
  }   
- .team-img-container, .facts-container, .sponsor-companies{
+ .team-img-container, .facts-container, .sponsor-companies, .features{
     grid-template-columns: repeat(1, 1fr);
  }
  .facts-container{
@@ -171,10 +205,14 @@ main > section{
     justify-items: center;
     gap: 50px;
  }
+ #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+ }
 }
 /* medium size device */
 @media screen and (min-width: 576px) and (max-width: 992px) {
-    .teams{
+    .teams, .features{
         flex-direction: column;
     }
     .our-features{
@@ -185,4 +223,8 @@ main > section{
         gap: 50px;
         justify-items: center;
     }
+     #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+ }
 }
